@@ -1,3 +1,7 @@
+2006-12-28 Jim Garlick <garlick@llnl.gov>
+
+	* getsize.c : Added getsize() implementation for hpux [Graham Smith].
+
 2006-11-27 Jim Garlick <garlick@llnl.gov>
 
 	* scrub.c : Refuse to scrub a zero length file (avoids
